--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <h1>Lift Simulation</h1>
       <div class="input-section">
         <label for="floors">Number of Floors:</label>
-        <input type="number" id="floors" min="2" value="5" />
+        <input type="number" id="floors" min="2" max="50" />
         <label for="lifts">Number of Lifts:</label>
-        <input type="number" id="lifts" min="1" max="10" value="1" />
+        <input type="number" id="lifts" min="1" max="8" />
         <button id="start-simulation">Start Simulation</button>
       </div>
       <div id="simulation-area">
