--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
         <label for="floors">Number of Floors:</label>
         <input type="number" id="floors" min="2" max="50" />
         <label for="lifts">Number of Lifts:</label>
-        <input type="number" id="lifts" min="1" max="8" />
+        <input type="number" id="lifts" min="1" />
         <button id="start-simulation">Start Simulation</button>
       </div>
       <div id="simulation-area">
         <div id="floors-container"></div>
-        <div id="lifts-container"></div>
+        <div id="lifts-container">
+          <!-- <div class="lifts-wrapper"></div> -->
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
