--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
       </div>
       <div id="simulation-area">
         <div id="floors-container"></div>
-        <div id="lifts-container">
-          <!-- <div class="lifts-wrapper"></div> -->
-        </div>
+        <div id="lifts-container"></div>
       </div>
     </div>
     <script src="script.js"></script>
