--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Lift Simulation</h1>
       <div class="input-section">
         <label for="floors">Number of Floors:</label>
-        <input type="number" id="floors" min="2" max="50" />
+        <input type="number" id="floors" min="2" />
         <label for="lifts">Number of Lifts:</label>
         <input type="number" id="lifts" min="1" />
         <button id="start-simulation">Start Simulation</button>
