--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>Lift Simulation</h1>
-      <div class="input-section">
-        <label for="floors">Number of Floors:</label>
-        <input type="number" id="floors" min="2" />
-        <label for="lifts">Number of Lifts:</label>
-        <input type="number" id="lifts" min="1" />
-        <button id="start-simulation">Start Simulation</button>
-      </div>
-      <div id="simulation-area">
-        <div id="floors-container"></div>
-        <div id="lifts-container"></div>
-      </div>
+    <h1>Lift Simulation</h1>
+
+    <div class="input-section">
+      <label for="floors">Number of Floors:</label>
+      <input type="number" id="floors" min="2" max="100" value="5" />
+      <label for="lifts">Number of Lifts:</label>
+      <input type="number" id="lifts" min="1" max="100" value="2" />
+      <button id="start-simulation">Start Simulation</button>
     </div>
+
+    <div id="simulation-area">
+      <div id="floors-container"></div>
+      <div id="lifts-container"></div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
